src/test/resources/org/rust/ide/inspections/fixtures/duplicate_trait_constant.rs
trait T {
     const B: i32;
     const <error descr="Duplicate trait constant 'B'">B</error>: i32;
     const <error descr="Duplicate trait constant 'B'">B</error>: i32 = 1;
 }